# pico-projects

./: README.md
smell-sound/: CMakeLists.txt  smell-sound.c
smell-sound/lib/: CMakeLists.txt
speak-mod/: main.py
